--- a/src/DictionaryEntry/DictionaryEntry.csproj
+++ b/src/DictionaryEntry/DictionaryEntry.csproj
@@ -8,8 +8,8 @@
         <LangVersion>latest</LangVersion>
 
         <PackageId>DictionaryEntry</PackageId>
-        <Version>0.1.0</Version>
-        <PackageVersion>0.1.0</PackageVersion>
+        <Version>0.1.2</Version>
+        <PackageVersion>0.1.2</PackageVersion>
         <Authors>Kyle Hickman</Authors>
         <Description>Dictionary manipulation with a fluent, expressive syntax.</Description>
         <PackageTags>dictionary;collections;entry;fluent;extension</PackageTags>
@@ -28,6 +28,10 @@
 
     <ItemGroup>
         <None Include="../../README.md" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     </ItemGroup>
 
 </Project>
