test: add multi-version .NET testing to CI

--- a/src/DictionaryEntry.Tests/DictionaryEntry.Tests.csproj
+++ b/src/DictionaryEntry.Tests/DictionaryEntry.Tests.csproj
@@ -5,7 +5,7 @@
         <Nullable>enable</Nullable>
         <OutputType>Exe</OutputType>
         <RootNamespace>DictionaryEntry.Tests</RootNamespace>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net7.0;net8.0;net9.0</TargetFrameworks>
         <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
         <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
     </PropertyGroup>
