ci: use trusted nuget publishing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,6 +6,9 @@ on:
     
 jobs:
   build-and-publish:
+    permissions:
+      contents: read
+      id-token: write
     runs-on: ubuntu-latest
     
     steps:
@@ -28,6 +31,12 @@ jobs:
     - name: Pack
       run: dotnet pack src/DictionaryEntry/DictionaryEntry.csproj --configuration Release --no-build --output ./nupkgs
       
+    - name: NuGet login
+      uses: NuGet/login@v1
+      id: login
+      with:
+        user: kjhickman
+      
     - name: Push to NuGet.org
-      run: dotnet nuget push ./nupkgs/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+      run: dotnet nuget push ./nupkgs/*.nupkg --api-key "${{ steps.login.outputs.NUGET_API_KEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate
       
