--- a/src/DictionaryEntry.Benchmarks/DictionaryEntry.Benchmarks.csproj
+++ b/src/DictionaryEntry.Benchmarks/DictionaryEntry.Benchmarks.csproj
@@ -1,18 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <ServerGarbageCollection>true</ServerGarbageCollection>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+        <PackageReference Include="BenchmarkDotNet" Version="0.15.6" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DictionaryEntry\DictionaryEntry.csproj" />
+        <ProjectReference Include="..\DictionaryEntry\DictionaryEntry.csproj" />
     </ItemGroup>
 
 </Project>
